"added torch implementation"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,14 @@
 
 export(OLSw)
 export(bal)
+export(bal_lbfgs)
 export(eb_solve_dual)
 export(eb_solve_primal)
+export(ebal_torch)
 export(entrBal)
+export(hainmueller)
 export(qr_solve_primal)
 import(CVXR)
 import(Matrix)
 import(car)
+import(torch)
