Added experimental pogs implementation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(OLSw)
 export(bal)
 export(bal_lbfgs)
+export(bal_pogs)
 export(eb_solve_dual)
 export(eb_solve_primal)
 export(ebal_torch)
@@ -12,4 +13,5 @@ export(qr_solve_primal)
 import(CVXR)
 import(Matrix)
 import(car)
+import(pogs)
 import(torch)
